--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
-*.pyc
+*.py[cod]
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+
+# Testing
 /test*
 !/tests/
